なんか変な文字がでる

--- a/味噌とみょうがときゅうりなつけうどん.md
+++ b/味噌とみょうがときゅうりなつけうどん.md
@@ -8,8 +8,8 @@
    - 曲がってるやつがおすすめ。うそです。
  - ミョウガ一本
  - うどん
-   - 稲城うどんがおすすめ。讃岐でもおいしい。
- - みそ（適量）
+   - 稲城うどんがおすすめ。讃岐でもおいしい。
+ - みそ（適量）
    - 今日どれくらい汗をかいたかによる
    - 「塩気足りないなぁ」って時はふやすがよい
  - オプションで大葉
@@ -28,13 +28,13 @@
 
 あまった残り半分は味噌つけて食べちゃいましょう
 
-### オプション：大葉をみじん切りにする
+### オプション：大葉をみじん切りにする
 
 大葉は結構使い切るの大変なので、オプションです。
 
 ### お茶碗に味噌を入れる
 
-適当にスプーンで掬って入れます。適当でいいです。
+適当にスプーンで掬って入れます。適当でいいです。
 
 ### お茶碗にすこし水を入れて薄める
 
@@ -42,14 +42,14 @@
 
 うどんを食べていると少しずつ薄まっていくので、最初は少し濃いめぐらいで良いとおもいます。
 
-### うどんをレンジで温め、冷水で〆る
+### うどんをレンジで温め、冷水で〆る
 
 夏場は冷たい水が蛇口から出てこないという問題が指摘されています。
 
 ### うどんをざるに盛る
 
-めんどくさいからだいたい冷水で〆るのにつかったステンレスのやつをそのまま。下に広めのお皿を置いておくと机が濡れなくてすみます。
+めんどくさいからだいたい冷水で〆るのにつかったステンレスのやつをそのまま。下に広めのお皿を置いておくと机が濡れなくてすみます。
 
 ### 完成
 
-ザルからうどん掬って味噌のつゆに付けて食べる。
+ザルからうどん掬って味噌のつゆに付けて食べる。
