--- a/味噌とみょうがときゅうりなつけうどん.md
+++ b/味噌とみょうがときゅうりなつけうどん.md
@@ -7,7 +7,7 @@
  - きゅうり一本
    - 曲がってるやつがおすすめ。うそです。
  - ミョウガ一本
- - うどん
+ - （冷凍）うどん
    - 稲城うどんがおすすめ。讃岐でもおいしい。
  - みそ（適量）
    - 今日どれくらい汗をかいたかによる
@@ -18,38 +18,42 @@
 
 ## 作り方
 
-### ミョウガを薄切りにする
+### 1. 下ごしらえ
+
+#### 1.1 ミョウガを薄切りにする
 
 切った側から茶碗に入れると楽。
 
-### きゅうりを薄切りにする
+#### 1.2 きゅうりを薄切りにする
 
 だいたい半分も切るとミョウガと同じぐらいの量になる。これぐらいでだいたいちょうど良い。
 
-あまった残り半分は味噌つけてボリボリ食べちゃいましょう
+で、あまった残り半分は味噌つけてボリボリ食べちゃいましょう
 
-### オプション：大葉をみじん切りにする
+これも切ったそばから茶碗に入れちゃいましょう。
+
+#### 1.3 (optional)大葉をみじん切りにする
 
 大葉は結構使い切るの大変なので、オプションです。
 
-### お茶碗に味噌を入れる
+### 2. お茶碗に味噌を入れる
 
 適当にスプーンで掬って入れます。適当でいいです。
 
-### お茶碗にすこし水を入れて薄める
+### 3. お茶碗にすこし水を入れて薄める
 
 適当で良いですが、入れた水は出せないことに注意しましょう。
 
 うどんを食べていると少しずつ薄まっていくので、最初は少し濃いめぐらいで良いとおもいます。
 
-### うどんをレンジで温め、冷水で〆る
+### 4. 冷凍うどんをレンジで温め、冷水で〆る
 
 夏場は冷たい水が蛇口から出てこないという問題が指摘されています。
 
-### うどんをざるに盛る
+### 5. うどんをざるに盛る
 
 めんどくさいからだいたい冷水で〆るのにつかったステンレスのやつをそのまま。下に広めのお皿を置いておくと机が濡れなくてすみます。
 
-### 完成
+### 6. 完成！
 
-ザルからうどん掬って味噌のつゆに付けて食べる。
+ザルからうどん掬って味噌のつゆに付けてずずっと食べちゃいましょう。
