--- a/玄米の炊き方.md
+++ b/玄米の炊き方.md
@@ -8,15 +8,39 @@
 
 ふっくらはする。
 
-### 1. 玄米を3カップ計量する。
+### 1. 玄米を3カップ計量する。
 
+袋からカップに入れるときに粒がこぼれやすいので気をつけて。
 
+### 2. 洗って水を切る
 
-### 2. 洗う
+水には漬けなくていい。
 
-水には漬けなくていいと思う。
+### 3. 圧力鍋に入れ、水を3カップ加える
 
-### 3. 
+同じ3カップ。なので覚えやすい。
+
+水を切る時の切り加減で水加減が変わるはずだけど、気づいたことはない。なので、気にしなくてよい。
+
+#### 4. IHクッキングヒーターを起動し、最強にセットする。
+
+この時の注意として、パソコンはシャットダウンするか、エアコンを切るかしないとたぶんどこかでブレーカーが落ちる。
+
+#### 5. 蒸気が吹き出して音がしてきたら、IHクッキングヒーターをゲージ4本にする
+
+「ゲージ4本」はお手持ちのIHクッキングヒーターによって変わるわけですが、つまるところ、蒸気が吹き出すのをずっと維持できるギリギリの火力ということになります。
+
+#### 6. 30分加熱し続ける
+
+中身が見えなくて怖い。こういう時はタイマーに頼りましょう。
+
+#### 7. IHクッキングヒーターを切り、弁が開くまで待つ
+
+無理に冷やしたりしなくてよい。
+
+#### 8. 完成
+
+3カップは多少多いけれど、冷凍すればまぁちょうど良いくらいかなぁという。
 
 ## フライパン
 
