--- a/玄米の炊き方.md
+++ b/玄米の炊き方.md
@@ -34,7 +34,7 @@
 
 #### 6. 30分加熱し続ける
 
-中身が見えなくて怖い。こういう時はタイマーに頼りましょう。蒸気が出てこなくなったりした場合、水を入れ忘れている可能性などがあり、そういう時は30分よりも前でも加熱を止めないといけません。なので、隣で本を読んだりしましょう。
+中身が見えなくて怖い。こういう時はタイマーに頼りましょう。蒸気が出てこなくなったりした場合、水の量を間違えている可能性などがあり、そういう時は30分よりも前でも加熱を止めないといけません。なので、隣で本を読んだりしましょう。
 
 #### 7. IHクッキングヒーターを切り、弁が開くまで待つ
 
