--- a/玄米の炊き方.md
+++ b/玄米の炊き方.md
@@ -46,6 +46,24 @@
 
 ## フライパン
 
-楽。
+楽。ちょっと固めに仕上がります。
 
 ### 1. 玄米を２カップ計量し、洗う。
+
+水につけとくと柔らかく仕上がったりするのかもしれない。わかんない。
+
+### 2. フライパンに入れ、水も２カップ入れる。
+
+同じ量でし。楽でし。
+
+### 3. 蓋をして、IHクッキングヒーターで火力を最大にする
+
+結構周りにネバネバした蒸気を飛ばすので、壁から離した方がいい。
+
+### 4. 沸騰したら４本にする
+
+　４本じゃなくてもいいかもしれない。沸騰は維持されてないといけない気がする。わからない。
+
+### 5. 穴が空いてきて水気がなくなってきたら止めて放置する
+
+　だいたい10分程度かなぁ。
