--- a/玄米の炊き方.md
+++ b/玄米の炊き方.md
@@ -60,10 +60,10 @@
 
 結構周りにネバネバした蒸気を飛ばすので、壁から離した方がいい。
 
-### 4. 沸騰したら４本にする
+### 4. 穴が空いてきて水気がなくなってきたら４本にして10分程度放置
 
-　４本じゃなくてもいいかもしれない。沸騰は維持されてないといけない気がする。わからない。
+　４本じゃなくてもいいかもしれない。10分はもう少し具体的な観察にしたい。
 
-### 5. 穴が空いてきて水気がなくなってきたら止めて放置する
+### 5. 電源を切ってさらに放置
 
-　だいたい10分程度かなぁ。
+　だいたい10分程度かなぁ。これももう少し具体的にしたい。
