また１つ復元

--- a/生姜と唐辛子のあったか中華スープ.md
+++ b/生姜と唐辛子のあったか中華スープ.md
@@ -34,3 +34,7 @@
 ## このレシピの生い立ち
 
 同様に圧力鍋を使ったトマトスープを以前から作っていたのですが、今回中華に応用してみました。
+
+## 元リンク
+
+[生姜と唐辛子☆あったか中華スープ by ψ（プサイ） [クックパッド] 簡単おいしいみんなのレシピが166万品](http://web.archive.org/web/20140310052640/https://cookpad.com/recipe/2404164)
